src/main/java/com/example/jobala/_core/errors/apiException/ApiException400.java
package com.example.jobala._core.errors.apiException;

public class ApiException400 extends RuntimeException {

    public ApiException400(String msg) {
        super(msg);
    }
}
